Viewer - fix for infinite height change with scrollbar appearing and disappearing for editor node option buttons.

--- a/src/main/resources/webapp/app/content/viewer/viewer.component.css
+++ b/src/main/resources/webapp/app/content/viewer/viewer.component.css
@@ -78,3 +78,13 @@
     min-height: 1em;
     max-height: 30em;
 }
+
+
+/*
+    Option buttons
+*/
+
+.options
+{
+    max-height: 2em;
+}
